Modificación en tabla

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <th>Canción</th>
                     <th>Artista</th>
                     <th>Año</th>
-                    <th>Album</th>
-                    <th>Duración</th>
+                    <th>Albun</th>
+                    <th>Duration</th>
                     <th></th>
                     <th></th>
                 </tr>
