cambie el título de la tabla

--- a/lugares.html
+++ b/lugares.html
@@ -146,7 +146,7 @@
                 <div class="col-lg-6 col-md-4 col-sm-6 col-xs-12">
                     <div class="table-responsive">
                         <a name="tabla" id="tablahtml"></a>
-                        <h2>Tabla de posibles sitios a agregar en la web</h2>
+                        <h2>Tabla de posibles sitios a agregar en la página</h2>
                            <table class= "table" >
                                 <thead>
                                     <tr>
